# github-pulumi

./: .gitignore  Makefile  Pulumi.production.yaml  Pulumi.yaml  __main__.py  pyproject.toml
.github/workflows/: python-ci.yml  reusable-python-ci.yml
.pulumi/history/github-pulumi/production/: production-1738274271944041000.checkpoint.json.attrs  production-1738274271944041000.history.json  production-1738274271944041000.history.json.attrs
.pulumi/stacks/github-pulumi/: production.json  production.json.bak  production.json.bak.attrs
